# rk_genetic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  makefile
archive/: OLDCMakeLists.txt  makefile
archive/proposal/: honors_contract_proposal-jackson_cole.tex  honors_contract_proposal.bib
cpp/include/: rk.hpp  tableau.hpp
cpp/src/: main.cpp  rk.cpp  rk_ext.cpp
docs/final/: final-honors_contract-jackson_cole.tex  rkev_presentation-jackson_cole.tex
docs/final/content/: rkev.html
docs/final/shared/: preamble.tex  project_definitions.tex
include/: converters.hpp  rk.hpp  tableau.hpp
notebooks/: DEAP Playground.ipynb  rkev.ipynb  rkev_testing.ipynb
python/nbody/: __init__.py  system.py
scripts/: clean.sh  run.sh  run_cmake.sh  tex.sh
src/: main.cpp  rk.cpp  rk_ext.cpp  tableau.cpp
src/cpp/: tableau.cpp
src/python/nbody/: __init__.py  body.py  system.py
test/: test.py
